// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CapacityItem /> renders Capacity Item correctly 1`] = `
<div
  className="kubevirt-capacity__item"
>
  <div
    className="kubevirt-capacity__item-title"
  >
    title
  </div>
  <h6
    className="kubevirt-capacity__item-description"
  >
    50 unit available out of 100 unit
  </h6>
  <div
    className="kubevirt-capacity__graph"
    id="donut-chart-item-id"
  >
    <svg
      viewBox="0 0 200 200"
    >
      <ChartDonut
        data={
          Array [
            Object {
              "label": "Used: 50unit",
              "x": "Used",
              "y": 50,
            },
            Object {
              "label": "Available: 50unit",
              "x": "Available",
              "y": 50,
            },
          ]
        }
        height={200}
        labelComponent={
          <ChartTooltip
            style={
              Object {
                "fontSize": 20,
              }
            }
          />
        }
        labels={[Function]}
        standalone={false}
        themeColor="blue"
        themeVariant="light"
        width={200}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 25,
          }
        }
        text="50%"
        textAnchor="middle"
        x={100}
        y={88}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 15,
          }
        }
        text="Used"
        textAnchor="middle"
        x={100}
        y={112}
      />
    </svg>
  </div>
</div>
`;

exports[`<CapacityItem /> renders Loading capacity item correctly 1`] = `
<div
  className="kubevirt-capacity__item"
>
  <div
    className="kubevirt-capacity__item-title"
  >
    title
  </div>
  <h6
    className="kubevirt-capacity__item-description"
  >
    <InlineLoading
      size="md"
    />
  </h6>
  <div
    className="kubevirt-capacity__graph"
    id="donut-chart-item-id"
  >
    <svg
      viewBox="0 0 200 200"
    >
      <ChartDonut
        data={
          Array [
            Object {
              "x": "Used",
              "y": 0,
            },
            Object {
              "x": "Available",
              "y": 100,
            },
          ]
        }
        height={200}
        labelComponent={
          <ChartTooltip
            style={
              Object {
                "fontSize": 20,
              }
            }
          />
        }
        labels={[Function]}
        standalone={false}
        themeColor="blue"
        themeVariant="light"
        width={200}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 25,
          }
        }
        text="Loading"
        textAnchor="middle"
        x={100}
        y={88}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 15,
          }
        }
        text="Capacity"
        textAnchor="middle"
        x={100}
        y={112}
      />
    </svg>
  </div>
</div>
`;

exports[`<CapacityItem /> renders Unknown capacity item correctly 1`] = `
<div
  className="kubevirt-capacity__item"
>
  <div
    className="kubevirt-capacity__item-title"
  >
    title
  </div>
  <h6
    className="kubevirt-capacity__item-description"
  >
    Not available
  </h6>
  <div
    className="kubevirt-capacity__graph"
    id="donut-chart-item-id"
  >
    <svg
      viewBox="0 0 200 200"
    >
      <ChartDonut
        data={
          Array [
            Object {
              "x": "Used",
              "y": 0,
            },
            Object {
              "x": "Available",
              "y": 100,
            },
          ]
        }
        height={200}
        labelComponent={
          <ChartTooltip
            style={
              Object {
                "fontSize": 20,
              }
            }
          />
        }
        labels={[Function]}
        standalone={false}
        themeColor="blue"
        themeVariant="light"
        width={200}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 25,
          }
        }
        text="Unknown"
        textAnchor="middle"
        x={100}
        y={88}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 15,
          }
        }
        text="Capacity"
        textAnchor="middle"
        x={100}
        y={112}
      />
    </svg>
  </div>
</div>
`;
